syntax = "proto3";

option go_package = "github.com/cut4cut/hezzl-test-work";
option java_multiple_files = true;
option java_package = "github.com/cut4cut/hezzl-test-work";
option java_outer_classname = "hezzlTestWorkProto";

package rpc;

import "google/protobuf/timestamp.proto";

service ServiceUser {
  rpc Create (UserName) returns (UserId) {}
  rpc Delete (UserId) returns  (UserId) {}
  rpc GetList (Pagination) returns  (UserList) {}
}

message CreateRequest {
  string name = 1;
}

message CreateReply {
  int64 id = 1;
}

message Pagination {
  int32 page = 1;
  bool DescName = 2;
  bool DescCreated = 3;
  int32 ItemsPerPage = 4;
}

message UserId {
  int64 id = 1;
}

message UserName {
  string name = 1;
}

message User {
  int64 id = 1;
  string name = 2;
  google.protobuf.Timestamp created_dt = 3;
}

message UserList {
    repeated User users = 1;
}
